--- a/index.html
+++ b/index.html
@@ -1,70 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+    <head>
+        <title>Choose a website</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    </head>
+    <body>
+        <div class="container">
+            <h1 class="mb-5">GIT & Bootstrap Collaborative Project</h1>
+            <div class="row">
+                <div class="col-sm-4 bg-dark text-center">
+                    <a href="./website/designs/thumb.jpg"><img style="max-height: 400px;" class="img-responsive" src="website/designs/thumb.jpg"></img></a>
+                     </div>
+                <div class="col-sm">
+                    <h2>One Page Wonder - Start Bootstrap Template</h2>
+                    <a class="btn btn-primary" href="./website/">Live Version</a>
+                    <a class="btn btn-warning" href="./website/designs/thumb.jpg">How it Should Look</a>
+                    <a class="btn btn-danger" href="./website/designs/guide.jpg">See the Guide</a>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4ta parte</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    
-</head>
-
-<body>
-
-    <section>
-
-
-        <!--Contact-->
-        <div class="m-5 p-5">
-            <h1>Contact</h1>
-            <p class="fs-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est fugit tempore officiis reiciendis quas ad fuga, nam a eius minima, unde molestias. Iure perferendis optio error, voluptas qui voluptate ipsam?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore voluptatem eveniet repudiandae ipsam id accusantium dolor ad facere quibusdam laboriosam autem, enim possimus sequi laudantium mollitia nostrum harum at asperiores?</p>
-        </div>
-
-
-        <!--Container-->
-        <div class=" border rounded-4 container bg-light">
-
-
-            <!--e-mail-->
-            <div class="row align-items-baseline text-end">
-                <div class="col-md-2 mt-3">
-                    <label for="e-mail">Your E-mail</label>
-                </div>
-                <div class="col-md-10">
-                    <input type="e-mail" class="form-control" id="e-mail" placeholder="Your email">
+                    <div>
+                        <h2>Tips:</h2>
+                        <p>Copy and tweak components from <a href="https://getbootstrap.com/" target="_blank" >getbootstrap.com</a>.</p>
+                        <p>If you are looking at an example from <a href="https://getbootstrap.com/docs/5.1/examples/" target="_blank">https://getbootstrap.com/docs/5.1/examples/</a>, you can use the inspector (right mouse click to open this panel up) and then select the section you want in the "Elements" tab. Then go to copy, and copy element to quickly add to your project.</p>
+                        <p>To push changes to the website, remember this sequence:</p>
+                            <ul>
+                                <li>git add .</li>
+                                <li>git commit -m "what you modified"</li>
+                                <li>git push</li>
+                            </ul>
+                            <p>To see changes from teammates:</p>
+                                <ul>
+                                    <li>git pull</li>
+                                </ul>
+                                <p>To customize elements, use the style.css file located in assets/css.</p>
+                    </div>
                 </div>
             </div>
-
-
-            <!--Text-area-->
-            <div class="row align-items-baseline text-end">
-                <div class="col-md-2">
-                    <label for="message" class="form-label">Your message</label>
-                </div>
-                <div class="col-md-10 mt-3">
-                    <textarea class="form-control" id="message" rows="8"
-                        placeholder="Please enter your message here..."></textarea>
-                </div>
-            </div>
-
-
-            <!--Button-->
-            <div>
-                <div class="d-grid gap-2 d-md-flex justify-content-md-end my-3">
-                    <button class="btn btn-primary my-3 " type="button">Submit</button>
-                </div>
-            </div>
-        </div>
-        <div class="m-5 p-5">
-            <p>Copyright <i class="fa-regular fa-copyright"></i> Your Website 2024</p>
-        </div>
-
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+             </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    </body>
+    </html>
